--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ dist/
 bower_components/
 node_modules/
 npm-debug.log
+
+docs/source/cura-for-robo-desktop/images/skirt.PNG
+
+docs/source/cura-for-robo-desktop/images/skirt.PNG
